examples/test/testpolicy15272.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15272
  namespace: namespace318
spec:
  podSelector:
    matchLabels:
      key23: value13
      key2: value5
      key12: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value36
          key48: value26
      podSelector:
        matchLabels:
          key45: value14
          key41: value43
          key16: value4
